Updating img alt (was wrong)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   
   <picture>
-    <img src="/images/image-qr-code.png" alt="image if an qr code">
+    <img src="/images/image-qr-code.png" alt="image of an qr code">
   </picture>
 
   <section class="card_description">
